--- a/1.html
+++ b/1.html
@@ -1,3 +1,9 @@
+<li><a href="1.html" class="saw">BodyBuilding</a></li>
+<li><a href="2.html" class="saw">Supplement</a></li>
+<li><a href="3.html">Excercise</a></li>
+<li><a href="4.html" style="color:red;text-decoration:underline">rick.jpg</a></li>
+<li><a href="5.html">Comment</a></li>
+
 <!doctype html>
 <html>
 <head>
@@ -15,11 +21,7 @@
 <body>
   <h1><a href="index.html"class="y"> Fitness</a></h1>
   <h1 class="y">This is kim-chi BodyBuilding.</h1>
-<ol><strong>
-    <li><a href="1.html">BodyBuilding</a></li>
-    <li><a href="2.html" style="color:red">Supplement</a></li>
-    <li><a href="3.html">Excercise</a></li></strong>
-</ol>
+
 <a href="https://blog.naver.com/cksgml414"target="_blank" title="Blog">Blog link </a><br>
 [Supplement]<br>
 <p>타우린(Taurine)입니다.
@@ -44,8 +46,4 @@
 식단에 단백질 섭취가 제한되시는 분들에게는 좋은 구성이겠지요 ^.^<br>
 다음엔 식물성 단백질의 아미노산 조성표를 들고 올까 합니다 ~.~ </p>
 
-
-<img src="릭구.jpg" width="450">
-
-</body>
 </html>
