--- a/3.html
+++ b/3.html
@@ -7,6 +7,11 @@
 <body>
 
   <h1>Excercise</h1>
+  <li><a href="1.html" class="saw">BodyBuilding</a></li>
+  <li><a href="2.html" class="saw">Supplement</a></li>
+  <li><a href="3.html">Excercise</a></li>
+  <li><a href="4.html" style="color:red;text-decoration:underline">rick.jpg</a></li>
+  <li><a href="5.html">Comment</a></li>
 
 </body>
 </html>
