--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0>
     <meta name="description=" content="칼로리를 입력하면 결과로 그에 맞는 음식과 식품이 나옵니다.
     Food box는 올바른 섭취 방법에 대한 가이드라인을 제공합니다.">
-    <link rel="stylesheet" href="D:\Web\foodbox\CSS\style.css">
+    <link rel="stylesheet" href="CSS\style.css">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
 </head>
 <body>
